manifests/02-adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    name: adguard-home
