manifests/02-adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard-home
  labels:
    app: adguard-home
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: web
      protocol: TCP
      name: web
  selector:
    app: adguard-home
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard-home
  labels:
    app: adguard-home
spec:
  type: LoadBalancer
  ports:
    - port: 53
      targetPort: dns-tcp
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
  selector:
    app: adguard-home
